--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,14 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
-            "type": "node",
+            "name": "谷歌浏览器", 
+            "type": "chrome",
             "request": "launch",
-            "name": "启动程序",
-            "program": "${file}"
+            "url": "${file}",
+            "sourceMaps": true,
+            "webRoot": "${workspaceRoot}"
         }
     ]
 }
